--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+@ -1,41 +1,3 @@
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -5,6 +6,8 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+build
+gradle
 .idea
 *.iws
 *.iml
